# roci

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LEARNINGS.md  README.md  feature-gap-analysis.md  prompt.md
.ai_agents/: sub_agents_plan.md
.tasque/: config.json  events.jsonl
.tasque/specs/tsq-1av9jz0z/: spec.md
.tasque/specs/tsq-1av9jz0z.2.1/: spec.md
.tasque/specs/tsq-1av9jz0z.3.1/: spec.md
.tasque/specs/tsq-1av9jz0z.4.1/: spec.md
.tasque/specs/tsq-1zrreqmz/: spec.md
.tasque/specs/tsq-671d72xe/: spec.md
.tasque/specs/tsq-6fz4c8tt.1/: spec.md
.tasque/specs/tsq-6fz4c8tt.2/: spec.md
.tasque/specs/tsq-6fz4c8tt.3/: spec.md
.tasque/specs/tsq-6fz4c8tt.4/: spec.md
.tasque/specs/tsq-7c1a0f01/: spec.md
.tasque/specs/tsq-7c1a0f01.1/: spec.md
.tasque/specs/tsq-7c1a0f01.2/: spec.md
.tasque/specs/tsq-7c1a0f01.3/: spec.md
.tasque/specs/tsq-7c1a0f01.4/: spec.md
.tasque/specs/tsq-7c1a0f01.5/: spec.md
.tasque/specs/tsq-7c1a0f01.6/: spec.md
.tasque/specs/tsq-7c1a0f01.6.1/: spec.md
.tasque/specs/tsq-7c1a0f01.6.2/: spec.md
.tasque/specs/tsq-7c1a0f01.6.3/: spec.md
.tasque/specs/tsq-7c1a0f01.6.4/: spec.md
.tasque/specs/tsq-7c1a0f01.7/: spec.md
.tasque/specs/tsq-9c7a6acj/: spec.md
.tasque/specs/tsq-9c7a6acj.2/: spec.md
.tasque/specs/tsq-9c7a6acj.3/: spec.md
.tasque/specs/tsq-9c7a6acj.4/: spec.md
.tasque/specs/tsq-9c7a6acj.5/: spec.md
.tasque/specs/tsq-9c7a6acj.6/: spec.md
.tasque/specs/tsq-9wwvzzpg/: spec.md
.tasque/specs/tsq-9wwvzzpg.1/: spec.md
.tasque/specs/tsq-9wwvzzpg.2/: spec.md
.tasque/specs/tsq-9wwvzzpg.3/: spec.md
.tasque/specs/tsq-9wwvzzpg.4/: spec.md
.tasque/specs/tsq-9wwvzzpg.5/: spec.md
.tasque/specs/tsq-9wwvzzpg.6/: spec.md
.tasque/specs/tsq-a19fqccg/: spec.md
.tasque/specs/tsq-a19fqccg.1/: spec.md
.tasque/specs/tsq-a19fqccg.2/: spec.md
.tasque/specs/tsq-a19fqccg.3/: spec.md
.tasque/specs/tsq-a19fqccg.4/: spec.md
.tasque/specs/tsq-a19fqccg.5/: spec.md
.tasque/specs/tsq-a19fqccg.6/: spec.md
crates/roci-cli/: Cargo.toml
crates/roci-cli/src/: audio_cmd.rs  chat.rs  errors.rs  main.rs  models_cmd.rs  session_cmd.rs  skills_cmd.rs  tool_contracts_smoke.rs
crates/roci-cli/src/chat/: mcp.rs  resource_prompt.rs  runtime_events.rs  subagents.rs  user_input.rs
crates/roci-cli/src/cli/: auth.rs  mod.rs
crates/roci-cli/tests/: audio_cli.rs
crates/roci-core/: Cargo.toml
crates/roci-providers/: Cargo.toml
crates/roci-providers/src/: factories.rs  lib.rs  overflow.rs
crates/roci-providers/src/auth/: backends.rs  claude_code.rs  github_copilot.rs  mod.rs  openai_codex.rs
crates/roci-providers/src/models/: anthropic.rs  catalog.rs  google.rs  grok.rs  groq.rs  lmstudio.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs
crates/roci-providers/src/provider/: anthropic.rs  anthropic_compatible.rs  azure.rs  github_copilot.rs  google.rs  grok.rs  groq.rs  lmstudio.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openai_errors.rs  openai_responses.rs  openrouter.rs  replicate.rs  together.rs
crates/roci-providers/src/provider/openai_responses/: errors.rs  headers.rs  headers_tests.rs  mod.rs  request.rs  response.rs  response_tests.rs  stream.rs  tests.rs
crates/roci-providers/tests/: factory_registration.rs  overflow_surface.rs
crates/roci-tools/: Cargo.toml
crates/roci-tools/src/: builtin.rs  lib.rs
crates/roci-tools/src/builtin/: ask_user.rs  catalog.rs  common.rs  grep.rs  list_directory.rs  mod.rs  read_file.rs  shell.rs  tests.rs  write_file.rs
crates/roci-tools/tests/: workspace_tools.rs
docs/: ARCHITECTURE.md  agent-runtime-chat.md  ai-sdk.md  audio.md  azure.md  contributing.md  gpt-oss.md  lmstudio.md  models.md  resource-loader.md  skills.md  testing.md
docs/architecture/: ask-user-v1-peer-bus-seam.md  cli-soc.md  providers-soc.md
docs/learned/: LEARNINGS.md  agent-events-tool-updates.md  agent-message-conversion.md  codex-loop-evaluation.md  mcp.md  openai-gemini-api-shapes.md  openai-responses-options.md  ralph-loop-parallel.md
examples/: agent.rs  agent_runtime.rs  basic_generation.rs  custom_provider.rs  multi_provider.rs  streaming.rs  structured_output.rs  subagent_supervisor.rs  tool_calling.rs
scripts/: claude-loop.ts
src/: lib.rs  main.rs  prelude.rs
src/agent/: agent.rs  message.rs  mod.rs  runtime.rs  session.rs
src/agent_loop/: approvals.rs  events.rs  mod.rs  runner.rs  types.rs
src/audio/: mod.rs  openai.rs  transcription.rs  tts.rs
src/auth/: device_code.rs  error.rs  mod.rs  service.rs  store.rs  token.rs
src/cli/: auth.rs  mod.rs
src/config/: auth.rs  mod.rs
src/error/: mod.rs
src/generation/: convenience.rs  mod.rs  object.rs  stream.rs  text.rs
src/mcp/: aggregate.rs  bridge.rs  client.rs  instructions.rs  mod.rs  schema.rs  transport.rs
src/models/: anthropic.rs  capabilities.rs  google.rs  grok.rs  groq.rs  lmstudio.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  selector.rs
src/provider/: anthropic.rs  anthropic_compatible.rs  azure.rs  format.rs  github_copilot.rs  google.rs  grok.rs  groq.rs  http.rs  lmstudio.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openai_responses.rs  openrouter.rs  replicate.rs  sanitize.rs  together.rs
src/stop/: mod.rs
src/stream_transform/: mod.rs
src/tools/: arguments.rs  builtin.rs  dynamic.rs  mod.rs  tool.rs  types.rs  validation.rs
src/types/: generation.rs  image.rs  message.rs  mod.rs  results.rs  stream.rs  usage.rs
src/util/: cache.rs  mod.rs  retry.rs  usage.rs
tests/: audio_openai_provider_tests.rs  auth_integration_tests.rs  auth_manager_persistence_tests.rs  claude_code_auth_tests.rs  config_tests.rs  error_tests.rs  generation_tests.rs  github_copilot_auth_tests.rs  github_copilot_provider_tests.rs  live_providers.rs  mcp_integration_tests.rs  meta_crate_integration.rs  model_tests.rs  openai_codex_auth_tests.rs  realtime_session_tests.rs  stop_condition_tests.rs  stream_transform_tests.rs  tool_tests.rs  types_tests.rs  util_tests.rs
tests/auth_support/: mod.rs
tests/common/: mod.rs
(+456 files in other folders)
