[workspace]
members = [".", "crates/roci-cli", "crates/roci-tools", "crates/roci-core", "crates/roci-providers"]

[package]
name = "roci"
version = "0.1.0"
edition = "2021"
description = "Rust AI SDK — spiritual port of Tachikoma"
license = "MIT"
rust-version = "1.75"

[dependencies]
roci-core = { path = "crates/roci-core" }
roci-providers = { path = "crates/roci-providers" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-trait = "0.1"
tempfile = "3"

[features]
default = ["openai", "anthropic", "google"]

# Provider features (pass through to roci-providers)
openai = ["roci-providers/openai"]
anthropic = ["roci-providers/anthropic"]
google = ["roci-providers/google"]
grok = ["roci-providers/grok"]
groq = ["roci-providers/groq"]
mistral = ["roci-providers/mistral"]
ollama = ["roci-providers/ollama"]
lmstudio = ["roci-providers/lmstudio"]
azure = ["roci-providers/azure"]
openrouter = ["roci-providers/openrouter"]
together = ["roci-providers/together"]
replicate = ["roci-providers/replicate"]
openai-compatible = ["roci-providers/openai-compatible"]
anthropic-compatible = ["roci-providers/anthropic-compatible"]
all-providers = ["roci-providers/all-providers"]

# Capability features (pass through to roci-core)
agent = ["roci-core/agent"]
audio = ["roci-core/audio"]
mcp = ["roci-core/mcp"]

# Everything
full = ["all-providers", "agent", "audio", "mcp"]

[[example]]
name = "agent"
required-features = ["agent"]

[[example]]
name = "agent_runtime"
required-features = ["agent"]
