[package]
name = "roci-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
roci = { path = "../.." }
tokio = { version = "1", features = ["process", "fs", "time", "io-util"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
agent = ["roci/agent"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
