[package]
name = "roci-tools"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
roci = { path = "../.." }
tokio = { version = "1", features = ["process", "fs", "time", "io-util"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
agent = ["roci/agent"]

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
